--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,27 +1,5 @@
 [supervisord]
-logfile = /var/log/supervisord.log
-logfile_maxbytes = 10MB
-logfile_backups=10
-loglevel = info
-pidfile = /var/run/supervisord.pid
-identifier = supervisor
-directory = /tmp
+nodaemon=true
 
 [program:named]
 command=/usr/sbin/named -f
-process_name=%(program_name)s
-numprocs=1
-directory=/var/named
-priority=100
-autostart=true
-autorestart=unexpected
-startsecs=5
-startretries=3
-exitcodes=0,2
-stopsignal=TERM
-stopwaitsecs=10
-redirect_stderr=false
-stdout_logfile=/var/log/named_supervisord.log
-stdout_logfile_maxbytes=1MB
-stdout_logfile_backups=10
-stdout_capture_maxbytes=1MB
