--- a/etc/odbc.ini
+++ b/etc/odbc.ini
@@ -2,7 +2,7 @@
 Description=MySQL connection to 'asteriskcdrdb' database
 driver=MySQL
 server=localhost
-database=asteriskcdrdb2
+database=asteriskcdrdb
 Port=3306
 Socket=/var/run/mysqld/mysqld.sock
 option=3
